force-app/main/default/objects/FS_Brandset__c/FS_Brandset__c.object-meta.xml
<CustomObject>
    <description>FS_Brandset</description>
    <label>Brandset</label>
    <nameField>
        <label>Brandset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brandsets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>