force-app/main/default/objects/FS_Brandset__c/fields/Available_for_Selection__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Selection__c</fullName>
    <description>Available for Selection</description>
    <formula>NOT(ISBLANK(FS_Date_Brandset_is_available_for_Select__c)) &amp;&amp; FS_Date_Brandset_is_available_for_Select__c&lt;=TODAY() &amp;&amp;(FS_Effective_End_Date__c &gt;TODAY()|| ISBLANK(FS_Effective_End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for Selection</label>
    <type>Checkbox</type>
</CustomField>