force-app/main/default/objects/FS_Brandset__c/fields/FS_AccountName__c.field-meta.xml
<CustomField>
    <fullName>FS_AccountName__c</fullName>
    <inlineHelpText>These are the accounts that the brandset is created for</inlineHelpText>
    <label>Brandset Notes</label>
    <type>TextArea</type>
</CustomField>