force-app/main/default/objects/FS_Brandset__c/fields/FS_Available_for_commercial_use__c.field-meta.xml
<CustomField>
    <fullName>FS_Available_for_commercial_use__c</fullName>
    <formula>FS_Effective_Start_Date__c &lt;= today() &amp;&amp;(ISNULL(FS_Effective_End_Date__c )|| FS_Effective_End_Date__c &gt;today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for commercial use</label>
    <type>Checkbox</type>
</CustomField>