force-app/main/default/objects/FS_Brandset__c/fields/FS_Brandset_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Brandset_Number__c</fullName>
    <description>Brandset number</description>
    <displayFormat>B-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Brandset#</label>
    <type>AutoNumber</type>
</CustomField>