force-app/main/default/objects/FS_Brandset__c/fields/FS_Date_Brandset_is_available_for_Select__c.field-meta.xml
<CustomField>
    <fullName>FS_Date_Brandset_is_available_for_Select__c</fullName>
    <description>date from which the Brandset is available for selection in FET,This exposes the brandset for the users to select.</description>
    <inlineHelpText>Date from which the Brandset is available for selection in FET</inlineHelpText>
    <label>Date Brandset is available for Selection</label>
    <type>Date</type>
</CustomField>