force-app/main/default/objects/FS_Brandset__c/fields/FS_Description__c.field-meta.xml
<CustomField>
    <fullName>FS_Description__c</fullName>
    <label>Brandset Desc</label>
    <type>TextArea</type>
</CustomField>