force-app/main/default/objects/FS_Brandset__c/fields/FS_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Effective_End_Date__c</fullName>
    <inlineHelpText>Date when Brandset becomes unavailable for commercial use</inlineHelpText>
    <label>Commercial End Date</label>
    <type>Date</type>
</CustomField>