force-app/main/default/objects/FS_Brandset__c/fields/FS_Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Effective_Start_Date__c</fullName>
    <inlineHelpText>Date when Brandset becomes available for commercial use</inlineHelpText>
    <label>Commercial Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>