force-app/main/default/objects/FS_Brandset__c/fields/FS_Reason_for_Deactivating__c.field-meta.xml
<CustomField>
    <fullName>FS_Reason_for_Deactivating__c</fullName>
    <label>Reason for Deactivating</label>
    <type>TextArea</type>
</CustomField>