force-app/main/default/objects/FS_Brandset__c/fields/FS_SAP_Item_Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_SAP_Item_Proposal_Number__c</fullName>
    <label>SAP Proposal #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>