force-app/main/default/objects/FS_Brandset__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FS_Platform__c</columns>
    <columns>FS_SAP_Item_Proposal_Number__c</columns>
    <columns>FS_Effective_Start_Date__c</columns>
    <columns>FS_Effective_End_Date__c</columns>
    <columns>FS_Brandset_Number__c</columns>
    <columns>FS_Available_for_commercial_use__c</columns>
    <columns>FS_Date_Brandset_is_available_for_Select__c</columns>
    <columns>Available_for_Selection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>